--- a/index.html
+++ b/index.html
@@ -1,24 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>About Me</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <header>
     <h1>About Me</h1>
   </header>
   <main>
     <img src="https://user-images.githubusercontent.com/94281145/141847229-f68823b5-65f3-4fc3-bef1-9eb601ca9279.png">
-    <p>
-      My name is Regan Hayes. I usually go by 'Chanel' or my nickname 'Rae'. I am originally from Virginia but currently I live in New Jersey. I am 23 years old. Fun fact: I graduated from high school early. I entered the military straight out of high school. In the military, my job was Civil Engineering. I stayed in the military for 3.5 years and I was medically discharged. After the military, I worked on base as a civilian for a year. After that, I moved back to Virginia and worked at the shipyard for a few months. it was a great job but I met my fiance and decided to move back to New Jersey. After a few busted jobs, I decided to start my career in tech at Code Fellows because I felt I needed a diciplined setting to learn. My goal at Code Fellows is to learning the basics enough to start a career in tech and provide for my family and my daughter. 
-    </p>
-
-  </main>
-  <footer>
-    &copy; 2021 raechanel
-  </footer>
-  <script src="js/app.js"></script>
+    <section id="bio">
+      <p>
+        My name is Regan Hayes. I usually go by 'Chanel' or my nickname 'Rae'. I am originally from Virginia but currently I live in New Jersey. I am 23 years old. I decided to start my career in tech at Code Fellows because I felt I needed a diciplined setting to learn. My goal at Code Fellows is to learning the basics enough to start a career in tech and provide for my family and my daughter.
+      </p>
+    </section>
+    <br>
+    <section>
+        <h2><strong>My Education History</strong></h2>
+          <ul> 
+            <li>Western Branch High School - 2015 </li>
+            <li>University of Maryland Global Campus - Pursuing Software Engineering Bachelors Degree - 2023</li>
+          </ul>
+    </section>
+    <section>
+      <h2>Work Experience</h2>
+      <ul>
+        <li>Chic-fil-a was my first job right after high school for a couple of months</li>
+        <li>I entered the miltary right after and stayed for 3.5 years</li>
+        <li>I worked as a civilian on McGuire Air Force Base</li>
+        <li>I got a job at the shipyard as a Mechanical Assembler</li>
+        <li>I worked at Comcast as Installer for about a month</li>
+        <li>I worked at ADT for 4 months</li>
+    </section>
+    <section>
+      <h2><strong>Top 10 Places I want to visit</strong></h2>
+      <ol>
+        <li>Maldives</li>
+        <li>Turks and Caicos</li>
+        <li>Dominican Republic</li>
+        <li>California</li>
+        <li>Dubai</li>
+        <li>Japan</li>
+        <li>Miami</li>
+        <li>Bali</li>
+        <li>Paris</li>
+        <li>Philippines</li>
+      </ol>
+    </section>
+    <footer>
+      &copy; 2021 raechanel
+    </footer>
+    <script src="js/app.js"></script>
 </body>
+
 </html>
