--- a/index.html
+++ b/index.html
@@ -15,29 +15,28 @@
     <img src="https://user-images.githubusercontent.com/94281145/141847229-f68823b5-65f3-4fc3-bef1-9eb601ca9279.png">
     <section id="bio">
       <p>
-        My name is Regan Hayes. I usually go by 'Chanel' or my nickname 'Rae'. I am originally from Virginia but currently I live in New Jersey. I am 23 years old. I decided to start my career in tech at Code Fellows because I felt I needed a diciplined setting to learn. My goal at Code Fellows is to learning the basics enough to start a career in tech and provide for my family and my daughter.
+        My name is Regan Hayes. I usually go by 'Chanel' or my nickname 'Rae'. I am originally from Virginia but currently I live in New Jersey. I am 23 years old. I am newley engaged to an amazing woman name Kadedra. We have a daughter name Amirah and dog name Reggie. I decided to start my career in tech at Code Fellows because I felt I needed a diciplined setting to learn. My goal at Code Fellows is to learning the basics enough to start a career in tech and provide for my family and my daughter.
       </p>
     </section>
     <br>
     <section>
-        <h2><strong>My Education History</strong></h2>
+        <h2>My Education History</h2>
           <ul> 
-            <li>Western Branch High School - 2015 </li>
-            <li>University of Maryland Global Campus - Pursuing Software Engineering Bachelors Degree - 2023</li>
+            <li>Code Fellows</li>
+            <li>University of Maryland Global Campus</li>
+            <li>Western Branch High School</li>
           </ul>
     </section>
     <section>
       <h2>Work Experience</h2>
       <ul>
-        <li>Chic-fil-a was my first job right after high school for a couple of months</li>
-        <li>I entered the miltary right after and stayed for 3.5 years</li>
-        <li>I worked as a civilian on McGuire Air Force Base</li>
-        <li>I got a job at the shipyard as a Mechanical Assembler</li>
-        <li>I worked at Comcast as Installer for about a month</li>
-        <li>I worked at ADT for 4 months</li>
+        <li>Installation Technician | ADT | 04/21 - 08/21</li>
+        <li>Mechanical Assembler | Serco | 09/20 - 03/21</li>
+        <li>GIS Technician | Department of Defense | 2019 - 2020</li>
+        <li>Civil Engineering | United States Military | 2016 - 2019 </li>
     </section>
     <section>
-      <h2><strong>Top 10 Places I want to visit</strong></h2>
+      <h2>Top 10 places I want to visit</h2>
       <ol>
         <li>Maldives</li>
         <li>Turks and Caicos</li>
