--- a/index.html
+++ b/index.html
@@ -15,17 +15,20 @@
     <img src="https://user-images.githubusercontent.com/94281145/141847229-f68823b5-65f3-4fc3-bef1-9eb601ca9279.png">
     <section id="bio">
       <p>
-        My name is Regan Hayes. I usually go by 'Chanel' or my nickname 'Rae'. I am originally from Virginia but currently I live in New Jersey. I am 23 years old. I am newley engaged to an amazing woman name Kadedra. We have a daughter name Amirah and dog name Reggie. I decided to start my career in tech at Code Fellows because I felt I needed a diciplined setting to learn. My goal at Code Fellows is to learning the basics enough to start a career in tech and provide for my family and my daughter.
+        I am a passionate, highly responsible and goal-oriented software engineer with demonstrated fundamental
+        knowledge of software design and development including design, coding, testing, debugging and
+        maintenance. Highly motivated to deliver quality software. Seeking to utilize my background of
+        technical and programming skills as a junior-level software engineer.
       </p>
     </section>
     <br>
     <section>
-        <h2>My Education History</h2>
-          <ul> 
-            <li>Code Fellows</li>
-            <li>University of Maryland Global Campus</li>
-            <li>Western Branch High School</li>
-          </ul>
+      <h2>My Education History</h2>
+      <ul>
+        <li>Code Fellows</li>
+        <li>University of Maryland Global Campus</li>
+        <li>Western Branch High School</li>
+      </ul>
     </section>
     <section>
       <h2>Work Experience</h2>
@@ -35,20 +38,6 @@
         <li>GIS Technician | Department of Defense | 2019 - 2020</li>
         <li>Civil Engineering | United States Military | 2016 - 2019 </li>
     </section>
-    <section>
-      <h2>Top 10 places I want to visit</h2>
-      <ol>
-        <li>Maldives</li>
-        <li>Turks and Caicos</li>
-        <li>Dominican Republic</li>
-        <li>California</li>
-        <li>Dubai</li>
-        <li>Japan</li>
-        <li>Miami</li>
-        <li>Bali</li>
-        <li>Paris</li>
-        <li>Philippines</li>
-      </ol>
     </section>
     <footer>
       &copy; 2021 raechanel
