--- a/index.html
+++ b/index.html
@@ -2,47 +2,64 @@
 <html lang="en">
 
 <head>
-  <title>About Me</title>
+  <title>Regan Hayes</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <header>
-    <h1>About Me</h1>
+    <h1>Regan Hayes Profile</h1>
+   <!-- <nav>
+     <ul>
+       <li>About</li>
+       <li>Work</li>
+       <li>Experience</li>
+       <li>Contact</li>
+       <li>Resume</li>
+     </ul>
+   </nav> -->
   </header>
   <main>
-    <img src="https://user-images.githubusercontent.com/94281145/141847229-f68823b5-65f3-4fc3-bef1-9eb601ca9279.png">
-    <section id="bio">
-      <p>
-        I am a passionate, highly responsible and goal-oriented software engineer with demonstrated fundamental
-        knowledge of software design and development including design, coding, testing, debugging and
-        maintenance. Highly motivated to deliver quality software. Seeking to utilize my background of
-        technical and programming skills as a junior-level software engineer.
-      </p>
-    </section>
-    <br>
-    <section>
-      <h2>My Education History</h2>
-      <ul>
-        <li>Code Fellows</li>
-        <li>University of Maryland Global Campus</li>
-        <li>Western Branch High School</li>
-      </ul>
-    </section>
-    <section>
-      <h2>Work Experience</h2>
-      <ul>
-        <li>Installation Technician | ADT | 04/21 - 08/21</li>
-        <li>Mechanical Assembler | Serco | 09/20 - 03/21</li>
-        <li>GIS Technician | Department of Defense | 2019 - 2020</li>
-        <li>Civil Engineering | United States Military | 2016 - 2019 </li>
-    </section>
-    </section>
+    <img src="/img/headshot.png">
+    <div>
+      <section id="bio">
+        <p>
+          I am a passionate, highly responsible and goal-oriented software engineer with demonstrated fundamental
+          knowledge of software design and development including design, coding, testing, debugging and
+          maintenance. Highly motivated to deliver quality software. Seeking to utilize my background of
+          technical and programming skills as a junior-level software engineer.
+        </p>
+      </section>
+      <section id="projects">
+        Projects: 
+        <br>
+        <a href="https://blackjack-trainer.github.io/blackjack-trainer/index.html">Blackjack Game: Technologies Used: HTML, CSS, JavaScript</a>
+        <p></p>
+      </section>
+      <section>
+        <h2>My Education History</h2>
+        <ul>
+          <li>University of Maryland Global Campus | 2023</li>
+          <li>Code Fellows | 2022</li>
+          <li>Western Branch High School | 2015</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Work Experience</h2>
+        <ul>
+          <li>Installation Technician | ADT | 04/21 - 08/21</li>
+          <li>Mechanical Assembler | Serco | 09/20 - 03/21</li>
+          <li>GIS Technician | Department of Defense | 2019 - 2020</li>
+          <li>Project Management | United States Military | 2016 - 2019 </li>
+      </section>
+      </section>
+    </div>
     <footer>
       &copy; 2021 raechanel
     </footer>
     <script src="js/app.js"></script>
+  </main>
 </body>
 
 </html>
